--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-﻿asgiref==3.9.1
+gunicorn
+asgiref==3.9.1
 certifi==2025.8.3
 charset-normalizer==3.4.3
 Django==5.2.5
@@ -17,4 +18,5 @@ sqlparse==0.5.3
 threadpoolctl==3.6.0
 tzdata==2025.2
 urllib3==2.5.0
+
 
