--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 gunicorn
 psycopg2-binary
 whitenoise
+dj-database-url
 asgiref==3.9.1
 certifi==2025.8.3
 charset-normalizer==3.4.3
@@ -20,6 +21,7 @@ sqlparse==0.5.3
 threadpoolctl==3.6.0
 tzdata==2025.2
 urllib3==2.5.0
+
 
 
 
